# Voxel

./: .gitignore  Cargo.toml  performance_milestones
assets/shaders/: vertex_pulled_cubes.wgsl
examples/: basic.rs  shared.rs
src/: lib.rs  main.rs
src/render/: buffers.rs  mod.rs  pipeline.rs
src/world/: block.rs  chunk.rs  mod.rs
src/world/generation/: mod.rs
