[package]
name = "vkxl"     # name determined by a mispelling of voxel i though sounded neat
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
[dependencies]
bevy = "0.15.2"
bytemuck = "1.20.0"

[dev-dependencies]
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git" }

[[example]]
name = "shared"
crate-type = ["staticlib"]
